# sketch-game-backend

./: .gitignore  dummy.py  gamerules.txt  main.py  package-lock.json  pyproject.toml  requirements.txt  test.py  test.txt  test_game.js  test_ws.js
agent_prompts/: advisor.txt  ambassador.txt  end_of_turn.txt  init_context.txt  note_taker.txt  update_game_state.txt
src/create_game/: continents.py  create_game.py  schema.py
src/files/: general.py  local.py  s3.py  schema.py  utils.py
src/game/: create_game.py  end_turn.py  naming.py  schema.py  world_builder.py
src/llm/: advisor.py  advisor_agent.py  agent_tools.py  ambassador.py  client.py  context_agent.py  end_turn_agent.py  game_agent.py  game_context.py  helper_func.py  llm_game_state.py  message.py  state_to_context.py
src/server/: app.py  main.py  manager.py  schema.py  settings.py  websocket_handler.py
